--- a/TP2/CMakeLists.txt
+++ b/TP2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TP2 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(TP2  client.c server.c server.c fonte.c main.c)
+add_executable(TP2  client.c server.c fonte.c)
